Update email-connector version

--- a/composer.json
+++ b/composer.json
@@ -35,7 +35,7 @@
     "phing/phing": "^2.16",
     "pion/laravel-chunk-upload": "dev-bugfix",
     "predis/predis": "^1.1",
-    "processmaker/bpm-package-email-connector": "dev-master#a4dcdea",
+    "processmaker/bpm-package-email-connector": "dev-master",
     "processmaker/nayra": "dev-master",
     "ralouphie/getallheaders": "^2.0",
     "spatie/laravel-fractal": "^5.3",
