checking circle ci dusk tests configuration

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -126,30 +126,30 @@ jobs:
           command: "php artisan storage:link"
 
       # run tests!
-      - run:
-          name: "PHPUnit"
-          command: "./vendor/bin/phpunit -d memory_limit=-1 --coverage-html coverage"
-          environment:
-            DB_DATABASE: "circle_test"
-            DB_PASSWORD: "P4ssW0rd1!"
-            DB_USERNAME: "root"
-            RUN_MSSQL_TESTS: "true"
-            MSSQL_HOST: "127.0.0.1"
-            MSSQL_PORT: "1433"
-            MSSQL_DATABASE: "test"
-            MSSQL_USERNAME: "sa"
-            MSSQL_PASSWORD: "P4ssW0rd1!"
-            BPM_SCRIPTS_HOME: "/opt/executor"
-            BPM_SCRIPTS_DOCKER_MODE: "copying"
-      - run:
-          name: "Jest"
-          command: "npm run test"
-
-      - store_artifacts:
-          path: coverage
-
-      - store_artifacts:
-          path: tests/js/coverage
+#      - run:
+#          name: "PHPUnit"
+#          command: "./vendor/bin/phpunit -d memory_limit=-1 --coverage-html coverage"
+#          environment:
+#            DB_DATABASE: "circle_test"
+#            DB_PASSWORD: "P4ssW0rd1!"
+#            DB_USERNAME: "root"
+#            RUN_MSSQL_TESTS: "true"
+#            MSSQL_HOST: "127.0.0.1"
+#            MSSQL_PORT: "1433"
+#            MSSQL_DATABASE: "test"
+#            MSSQL_USERNAME: "sa"
+#            MSSQL_PASSWORD: "P4ssW0rd1!"
+#            BPM_SCRIPTS_HOME: "/opt/executor"
+#            BPM_SCRIPTS_DOCKER_MODE: "copying"
+#      - run:
+#          name: "Jest"
+#          command: "npm run test"
+#
+#      - store_artifacts:
+#          path: coverage
+#
+#      - store_artifacts:
+#          path: tests/js/coverage
 
       # Prepare for packaging for QA environment
 
@@ -225,14 +225,17 @@ jobs:
             # Generate Passport Keys
             ssh -o "ProxyCommand ssh buildbot.processmaker.net -A -W %h:%p" qa-pm4builds "cd ~/builds/$BUILD_NAME && php artisan passport:keys"
             
-#      - run:
-#          name: "SauceLabs Browser Tests: Chrome"
-#          command: "ssh -o \"ProxyCommand ssh buildbot.processmaker.net -A -W %h:%p\" qa-pm4builds \"cd ~/builds/$BUILD_NAME && php artisan dusk\""
-#          environment:
-#            DB_DATABASE: "circle_test"
-#            RUN_MSSQL_TESTS: "true"
-#            MSSQL_HOST: "127.0.0.1"
-#
+      - run:
+          name: "SauceLabs Browser Tests: Chrome"
+          command: "ssh -o \"ProxyCommand ssh buildbot.processmaker.net -A -W %h:%p\" qa-pm4builds \"cd ~/builds/$BUILD_NAME && php artisan dusk\""
+          environment:
+            DB_DATABASE: "circle_test"
+            RUN_MSSQL_TESTS: "true"
+            MSSQL_HOST: "127.0.0.1"
+
+      - store_artifacts:
+          path: tests/Browser
+
 #      - run:
 #          name: "SauceLabs Browser Tests: Firefox"
 #          command: "ssh -o \"ProxyCommand ssh buildbot.processmaker.net -A -W %h:%p\" qa-pm4builds \"cd ~/builds/$BUILD_NAME && php ~/builds/$BUILD_NAME/artisan dusk\""
