--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -265,9 +265,11 @@ jobs:
           command: "ssh -o \"ProxyCommand ssh buildbot.processmaker.net -A -W %h:%p\" qa-pm4builds \"php ~/builds/$BUILD_NAME/artisan migrate:fresh --seed --force\""
 
       - run:
-          name: "Configure Email-Connector Package and Script-Task"
+          name: "Configure Email-Connector Package, Script-Task, and Restart Horizon"
           command: |
             # Run email-connector commands once final migration has completed
             ssh -o "ProxyCommand ssh buildbot.processmaker.net -A -W %h:%p" qa-pm4builds "cd ~/builds/$BUILD_NAME/ && php artisan vendor:publish --tag=bpm-package-email-connector --force"
             ssh -o "ProxyCommand ssh buildbot.processmaker.net -A -W %h:%p" qa-pm4builds "cd ~/builds/$BUILD_NAME/ && php artisan db:seed --class="ProcessMaker\Packages\Connectors\Email\Seeds\EmailSendSeeder""
             ssh -o "ProxyCommand ssh buildbot.processmaker.net -A -W %h:%p" qa-pm4builds "cd ~/builds/$BUILD_NAME/ && php artisan cache:clear"
+            ssh -o "ProxyCommand ssh buildbot.processmaker.net -A -W %h:%p" qa-pm4builds "sudo supervisorctl restart processmaker-horizon-$BUILD_NAME:processmaker-horizon-$BUILD_NAME_00"
+            ssh -o "ProxyCommand ssh buildbot.processmaker.net -A -W %h:%p" qa-pm4builds "sudo supervisorctl restart processmaker-echo-server-$BUILD_NAME:processmaker-echo-server-$BUILD_NAME_00"
