Add example breadcrumbs for Tasks and Scripts

--- a/composer.json
+++ b/composer.json
@@ -23,6 +23,7 @@
     "php": ">=7.2.0",
     "TYPO3/class-alias-loader": "^1.0",
     "darkaonline/l5-swagger": "5.7.*",
+    "davejamesmiller/laravel-breadcrumbs": "5.x",
     "doctrine/dbal": "^2.5",
     "fideloper/proxy": "^4.0",
     "igaster/laravel-theme": "2.0.*",
