--- a/Homestead.yaml
+++ b/Homestead.yaml
@@ -2,6 +2,8 @@ ip: 192.168.10.10
 memory: 2048
 cpus: 1
 provider: virtualbox
+box: laravel/homestead
+version: 6.4.0
 authorize: ~/.ssh/id_rsa.pub
 keys:
     - ~/.ssh/id_rsa
