--- a/.env.dusk.testing
+++ b/.env.dusk.testing
@@ -1,13 +1,10 @@
-APP_DEBUG=TRUE
+APP_DEBUG=FALSE
 APP_NAME=ProcessMaker
 APP_ENV=testing
 APP_KEY=base64:15X/NLJiQvUFrSEvutCRtN4M+sgARUjb7Wra/9FjyOw=
-DB_HOSTNAME=localhost
-DB_PORT=3306
-DB_DATABASE=test
-DB_USERNAME=root
-DB_PASSWORD=
-APP_URL=https://bpm4.processmaker.local
+DB_CONNECTION=sqlite
+DB_DATABASE=/home/vagrant/processmaker/database/database.sqlite
+APP_URL=https://bpm4.dusk.processmaker.com
 
 SAUCELABS_BROWSER_TESTING=false
 SAUCELABS_USERNAME=processmaker
