--- a/package.json
+++ b/package.json
@@ -48,7 +48,7 @@
     "@fortawesome/free-solid-svg-icons": "^5.6.1",
     "@processmaker/modeler": "^0.2.6",
     "@processmaker/processmaker-bpmn-moddle": "^0.1.7",
-    "@processmaker/vue-form-builder": "git://github.com/ProcessMaker/vue-form-builder.git#feature/46",
+    "@processmaker/vue-form-builder": "git://github.com/ProcessMaker/vue-form-builder.git#feature/55",
     "@tinymce/tinymce-vue": "^1.0.8",
     "babel-eslint": "^10.0.1",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
@@ -60,11 +60,13 @@
     "eslint": "^4.19.1",
     "fs": "0.0.1-security",
     "imports-loader": "^0.8.0",
+    "install": "^0.12.2",
     "jointjs": "^2.1.4",
     "laravel-echo": "^1.4.0",
     "laravel-echo-server": "^1.3.8",
     "monaco-editor": "^0.13.1",
-    "monaco-editor-webpack-plugin": "^1.4.0",
+    "monaco-editor-webpack-plugin": "1.4.0",
+    "npm": "^6.7.0",
     "npm-font-open-sans": "^1.1.0",
     "phpunserialize": "^1.0.1",
     "popper.js": "^1.14.4",
