--- a/package.json
+++ b/package.json
@@ -64,7 +64,7 @@
     "laravel-echo": "^1.4.0",
     "laravel-echo-server": "^1.3.8",
     "monaco-editor": "^0.13.1",
-    "monaco-editor-webpack-plugin": "^1.4.0",
+    "monaco-editor-webpack-plugin": "1.4.0",
     "npm-font-open-sans": "^1.1.0",
     "phpunserialize": "^1.0.1",
     "popper.js": "^1.14.4",
