--- a/package.json
+++ b/package.json
@@ -40,7 +40,8 @@
     "moment-timezone": "^0.5.23",
     "vue": "^2.5.17",
     "vue-jest": "^2.6.0",
-    "vue-uniq-ids": "^1.0.0"
+    "vue-uniq-ids": "^1.0.0",
+    "webpack-cli": "^3.2.3"
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.6.1",
@@ -64,8 +65,8 @@
     "jointjs": "^2.1.4",
     "laravel-echo": "^1.4.0",
     "laravel-echo-server": "^1.3.8",
-    "monaco-editor": "^0.13.1",
-    "monaco-editor-webpack-plugin": "1.4.0",
+    "monaco-editor": "^0.15.6",
+    "monaco-editor-webpack-plugin": "^1.7.0",
     "npm": "^6.7.0",
     "npm-font-open-sans": "^1.1.0",
     "phpunserialize": "^1.0.1",
@@ -81,7 +82,7 @@
     "vue-deepset": "^0.6.3",
     "vue-events": "^3.1.0",
     "vue-json-pretty": "^1.4.1-beta.1",
-    "vue-monaco": "^0.2.0",
+    "vue-monaco": "^0.3.1",
     "vue-multiselect": "^2.1.0",
     "vue-password": "^1.2.0",
     "vue-resource": "^1.5.1",
@@ -89,6 +90,7 @@
     "vue-simple-uploader": "^0.5.6",
     "vue-template-compiler": "^2.5.17",
     "vuetable-2": "^1.7.5",
+    "webpack": "^3.11.0",
     "xml-js": "^1.6.7"
   },
   "jest": {
