--- a/package.json
+++ b/package.json
@@ -44,13 +44,14 @@
     "webpack-cli": "^3.2.3"
   },
   "dependencies": {
+    "@babel/runtime": "^7.3.1",
     "@fortawesome/fontawesome-free": "^5.6.1",
     "@fortawesome/free-brands-svg-icons": "^5.6.1",
     "@fortawesome/free-solid-svg-icons": "^5.6.1",
     "@processmaker/modeler": "^0.2.6",
     "@processmaker/processmaker-bpmn-moddle": "^0.1.7",
-    "@processmaker/vue-form-builder": "git://github.com/ProcessMaker/vue-form-builder.git#feature/55",
-    "@tinymce/tinymce-vue": "^1.0.8",
+    "@processmaker/vue-form-builder": "git://github.com/ProcessMaker/vue-form-builder.git#feature/62",
+    "@tinymce/tinymce-vue": "^2.0.0",
     "babel-eslint": "^10.0.1",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "bootstrap": "^4.1.3",
@@ -75,7 +76,7 @@
     "snapsvg": "^0.5.1",
     "source-map": "^0.7.3",
     "timezones.json": "^1.4.4",
-    "tinymce": "^4.8.1",
+    "tinymce": "^5.0.0",
     "tooltip.js": "^1.2.0",
     "v-tooltip": "^2.0.0-rc.33",
     "vue-croppie": "^1.3.12",
