--- a/package.json
+++ b/package.json
@@ -50,7 +50,7 @@
     "@fortawesome/free-solid-svg-icons": "^5.6.1",
     "@processmaker/modeler": "^0.2.6",
     "@processmaker/processmaker-bpmn-moddle": "^0.1.7",
-    "@processmaker/vue-form-builder": "git://github.com/ProcessMaker/vue-form-builder.git#feature/62",
+    "@processmaker/vue-form-builder": "^0.9.0",
     "@tinymce/tinymce-vue": "^2.0.0",
     "babel-eslint": "^10.0.1",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
