--- a/package.json
+++ b/package.json
@@ -44,55 +44,31 @@
     "webpack-cli": "^3.2.3"
   },
   "dependencies": {
-    "@babel/runtime": "^7.3.1",
-    "@fortawesome/fontawesome-free": "^5.6.1",
-    "@fortawesome/free-brands-svg-icons": "^5.6.1",
-    "@fortawesome/free-solid-svg-icons": "^5.6.1",
     "@processmaker/modeler": "^0.5.2",
     "@processmaker/processmaker-bpmn-moddle": "^0.2.0",
     "@processmaker/vue-form-builder": "^0.8.0",
-    "@tinymce/tinymce-vue": "^1.0.8",
-    "babel-eslint": "^10.0.1",
-    "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "bootstrap": "^4.1.3",
     "bootstrap-vue": "^2.0.0-rc.11",
-    "bpmn-moddle": "^5.1.5",
     "chart.js": "^2.7.2",
-    "country-json": "^1.0.7",
     "eslint": "^4.19.1",
-    "fs": "0.0.1-security",
-    "imports-loader": "^0.8.0",
-    "install": "^0.12.2",
-    "jointjs": "^2.1.4",
     "laravel-echo": "^1.4.0",
-    "laravel-echo-server": "^1.3.8",
     "monaco-editor": "^0.15.6",
     "monaco-editor-webpack-plugin": "^1.7.0",
     "npm": "^6.7.0",
-    "npm-font-open-sans": "^1.1.0",
     "phpunserialize": "^1.0.1",
     "popper.js": "^1.14.4",
-    "pusher-js": "^4.2.2",
     "snapsvg": "^0.5.1",
-    "source-map": "^0.7.3",
-    "timezones.json": "^1.4.4",
-    "tinymce": "^4.8.1",
-    "tooltip.js": "^1.2.0",
-    "v-tooltip": "^2.0.0-rc.33",
     "vue-croppie": "^1.3.12",
     "vue-deepset": "^0.6.3",
-    "vue-events": "^3.1.0",
     "vue-json-pretty": "^1.4.1-beta.1",
     "vue-monaco": "^0.3.1",
     "vue-multiselect": "^2.1.0",
     "vue-password": "^1.2.0",
-    "vue-resource": "^1.5.1",
     "vue-router": "^3.0.1",
     "vue-simple-uploader": "^0.5.6",
     "vue-template-compiler": "^2.5.17",
     "vuetable-2": "^1.7.5",
-    "webpack": "^3.11.0",
-    "xml-js": "^1.6.7"
+    "webpack": "^3.11.0"
   },
   "jest": {
     "setupFiles": [
