--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -86,15 +86,15 @@ jobs:
           # fallback to using the latest cache if no exact match is found
           - v1-dependencies-
 
-      - restore_cache:
-          keys:
-          - v1-npm-dependencies-{{ checksum "package.json" }}
-          # fallback to using the latest cache if no exact match is found
-          - v1-npm-dependencies-
+      # - restore_cache:
+      #     keys:
+      #     - v1-npm-dependencies-{{ checksum "package.json" }}
+      #     # fallback to using the latest cache if no exact match is found
+      #     - v1-npm-dependencies-
 
       - run: composer install -n --prefer-dist
       
-      - run: sudo npm install -g npm@6.4.1 && npm ci
+      # - run: sudo npm install -g npm@6.4.1 && npm ci
 
       - save_cache:
           paths:
@@ -105,6 +105,10 @@ jobs:
       - run: sudo docker-php-ext-enable xdebug
 
       - setup_remote_docker
+
+      - run:
+          name: setup SDKs
+          command: php build_sdk.php
 
       - run:
           name: Configure scripts executor
@@ -125,10 +129,6 @@ jobs:
           name: "Media Storage Link"
           command: "php artisan storage:link"
       
-      - run:
-          name: Build our application SDKs
-          command: php build_sdk.php
-
       # run tests!
       - run:
           name: "PHPUnit"
