Generate swagger doc before running sdk builders

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -110,6 +110,7 @@ jobs:
           name: setup SDKs
           command: |
             rm -rf storage/api && mkdir storage/api
+            php artisan l5:generate
             php artisan bpm:sdk php
             php artisan bpm:sdk lua
 
