--- a/package.json
+++ b/package.json
@@ -55,13 +55,14 @@
     "chart.js": "^2.7.2",
     "eslint": "^4.19.1",
     "laravel-echo": "^1.4.0",
+    "laravel-echo-server": "^1.3.8",
     "monaco-editor": "^0.15.6",
     "monaco-editor-webpack-plugin": "^1.7.0",
-    "laravel-echo-server": "^1.3.8",
     "npm": "^6.7.0",
     "phpunserialize": "^1.0.1",
     "popper.js": "^1.14.4",
     "snapsvg": "^0.5.1",
+    "source-map": "^0.7.3",
     "vue-croppie": "^1.3.12",
     "vue-deepset": "^0.6.3",
     "vue-json-pretty": "^1.4.1-beta.1",
