--- a/package.json
+++ b/package.json
@@ -44,6 +44,9 @@
     "webpack-cli": "^3.2.3"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.15",
+    "@fortawesome/free-solid-svg-icons": "^5.7.2",
+    "@fortawesome/vue-fontawesome": "^0.1.5",
     "@processmaker/modeler": "^0.5.2",
     "@processmaker/processmaker-bpmn-moddle": "^0.2.0",
     "@processmaker/vue-form-builder": "^0.10.2",
