--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -109,7 +109,7 @@ jobs:
       - run:
           name: setup SDKs
           command: |
-            rm -rf storage/api && mkdir storage/api
+            rm -rf storage/api
             php artisan l5:generate
             php artisan bpm:sdk php
             php artisan bpm:sdk lua
