--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -109,10 +109,11 @@ jobs:
       - run:
           name: setup SDKs
           command: |
-            rm -rf storage/api
             php artisan l5:generate
-            php artisan bpm:sdk php
-            php artisan bpm:sdk lua
+            mkdir -p /tmp/pm4-sdk-php
+            php artisan bpm:sdk php /tmp/pm4-sdk-php
+            mkdir -p /tmp/pm4-sdk-lua
+            php artisan bpm:sdk lua /tmp/pm4-sdk-lua
 
       - run:
           name: Configure scripts executor
