--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -34,9 +34,7 @@ jobs:
           command: |
             echo 'export BUILD_NAME=$(echo "$CIRCLE_BRANCH" | tr /. -)' >> $BASH_ENV
             echo 'export QA_DB_NAME=$(echo "bpm4$CIRCLE_BRANCH" | tr -d /.-)' >> $BASH_ENV
-            source $BASH_ENV
-            sudo apt install -y sshpass
-            sshpass -p $SDK_HOST_BUILD_PASS ssh -o StrictHostKeyChecking=no root@186.121.202.135 -p 2222 /opt/DevOpsAutomationHub/build_lua.sh aut-sdk-build-1
+            source $BASH_ENV            
 
       - run:
           name: QA Host SSH Host Identifier Import
@@ -47,6 +45,14 @@ jobs:
             chmod 0600 ~/.ssh/known_hosts
 
       - checkout
+
+      - run:
+          name: Build SDKs
+          command: |
+            sudo apt install -y sshpass
+            sshpass -p $SDK_HOST_BUILD_PASS ssh -o StrictHostKeyChecking=no root@186.121.202.135 -p 2222 /opt/DevOpsAutomationHub/build_php.sh release/$CIRCLE_BRANCH
+            sshpass -p $SDK_HOST_BUILD_PASS ssh -o StrictHostKeyChecking=no root@186.121.202.135 -p 2222 /opt/DevOpsAutomationHub/build_lua.sh release/$CIRCLE_BRANCH
+            sshpass -p $SDK_HOST_BUILD_PASS ssh -o StrictHostKeyChecking=no root@186.121.202.135 -p 2222 /opt/DevOpsAutomationHub/build_node.sh release/$CIRCLE_BRANCH
 
       # Install PHP dependencies
       - run: sudo apt install -y libpng-dev libzip-dev default-libmysqlclient-dev curl apt-transport-https
@@ -111,11 +117,11 @@ jobs:
       - run:
           name: setup SDKs
           command: |
-            #php artisan l5:generate
-            #mkdir -p /tmp/pm4-sdk-php
-            #php artisan bpm:sdk php /tmp/pm4-sdk-php
-            #mkdir -p /tmp/pm4-sdk-lua
-            #php artisan bpm:sdk lua /tmp/pm4-sdk-lua
+            php artisan l5:generate
+            mkdir -p /tmp/pm4-sdk-php
+            php artisan bpm:sdk php /tmp/pm4-sdk-php
+            mkdir -p /tmp/pm4-sdk-lua
+            php artisan bpm:sdk lua /tmp/pm4-sdk-lua
             
 
 
