--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -121,21 +121,11 @@ jobs:
       - setup_remote_docker
 
       - run:
-          name: setup SDKs
-          command: |
-            php artisan l5:generate
-            mkdir -p /tmp/pm4-sdk-php
-            php artisan bpm:sdk php /tmp/pm4-sdk-php
-            mkdir -p /tmp/pm4-sdk-lua
-            php artisan bpm:sdk lua /tmp/pm4-sdk-lua
-            
-
-
-      - run:
           name: Configure scripts executor
           command: |
-            docker pull processmaker/executor:php
-            docker pull processmaker/executor:lua
+            docker pull devopsstacks/pm4-docker-executor-php:dev-release-${BUILD_NAME}
+            docker pull devopsstacks/pm4-docker-executor-lua:dev-release-${BUILD_NAME}
+            docker pull devopsstacks/pm4-docker-executor-node:dev-release-${BUILD_NAME}
             sudo mkdir -m777 /opt/executor
 
       - run: sudo docker-php-ext-enable xdebug
