Prefix with sudo

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -94,7 +94,7 @@ jobs:
 
       - run: composer install -n --prefer-dist
 
-      - run: npm install -g npm@6.4.1 && npm ci
+      - run: sudo npm install -g npm@6.4.1 && npm ci
 
       - save_cache:
           paths:
