--- a/package.json
+++ b/package.json
@@ -47,10 +47,10 @@
     "@fortawesome/fontawesome-free": "^5.6.1",
     "@fortawesome/free-brands-svg-icons": "^5.6.1",
     "@fortawesome/free-solid-svg-icons": "^5.6.1",
-    "@processmaker/spark-modeler": "^0.7.2",
+    "@processmaker/modeler": "^0.7.2",
     "@processmaker/processmaker-bpmn-moddle": "^0.2.0",
     "@processmaker/vue-form-elements": "^0.5.0",
-    "@processmaker/spark-screen-builder": "^0.11.0",
+    "@processmaker/spark-screen-builder": "^0.12.1",
     "@tinymce/tinymce-vue": "^1.0.8",
     "babel-eslint": "^10.0.1",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
